<resources>
    <string name="app_name">Family Map</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="signIn">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_explain">Click on a marker to see event details</string>
    <string name="map_explain_part2">details</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="personFirstName">First Name</string>
    <string name="personLastName">Last Name</string>
    <string name="personGender">Gender</string>
    <string name="Null">null</string>
    <string name="lifeEventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="upButton">Up Button</string>
    <string name="LifeStory">Life Story Lines</string>
    <string name="LifeStoryDesc">SHOW LIFE STORY LINES</string>
    <string name="FamilyTreeLine">Family Tree Lines</string>
    <string name="FamilyTreeLineDescr">SHOW FAMILY TREE LINES</string>
    <string name="SpouseLine">Spouse Lines</string>
    <string name="SpouseLineDescr">SHOW SPOUSE LINES</string>
    <string name="FatherSide">Father\'s Side</string>
    <string name="FatherSideDescr">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="MotherSide">Mother\'s Side</string>
    <string name="MotherSideDescr">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="MaleEvents">Male Events</string>
    <string name="GenderEventsDescr">FILTER EVENTS BASED ON GENDER</string>
    <string name="FemaleEvents">Female Events</string>
    <string name="LogOut">Logout</string>
    <string name="LogOutDescr">RETURN TO LOGIN SCREEN</string>
</resources>