<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin ="16dp"
        android:stretchColumns="3"
        tools:context=".LoginFragment">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/serverHost" />
            <EditText
                android:id ="@+id/serverHost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textNoSuggestions"
                tools:text = "10.0.2.2"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/serverPort" />
            <EditText
                android:id ="@+id/serverPort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="phone"
                tools:text = "8080"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/userName" />
            <EditText
                android:id ="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textNoSuggestions"
                tools:text = "@tools:sample/first_names"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/password"/>
            <EditText
                android:id ="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textPassword"
                tools:text = "********"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/firstName"/>
            <EditText
                android:id ="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:text = "@tools:sample/first_names"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/lastName" />
            <EditText
                android:id ="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:text = "@tools:sample/last_names"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/email"/>
            <EditText
                android:id ="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:inputType="textEmailAddress"
                tools:text = "jane@gmail.com"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/genderButton"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/maleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male" />

                <RadioButton
                    android:id="@+id/femaleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female" />
            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop = "20dp">

            <Button
                android:id="@+id/signIn"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signIn" />
            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register" />
        </LinearLayout>
    </TableLayout>
</ScrollView>